2005-07-22  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c: Protect against division by zero in various places.
	(http://bugzilla.gnome.org/show_bug.cgi?id=311299, reported by Ali Akcaagac)
	
2005-07-22  Owen Taylor  <otaylor@redhat.com>

	Patch from Tor Lillqvist  <tml@novell.com>

	* src/cairo-win32-font.c: Define TT_PRIM_CSPLINE if it wasn't in
	the headers.
	(_get_system_quality): Add missing variable smoothing_type.

2005-07-22  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Get the case right. It's cairo, not Cairo.

2005-07-22  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that sub-pixel text rendering is done now.

2005-07-21  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c: The FT_LOAD_TARGET_* flags aren't separate
	bitfields, but rather an embedded subfield, so test with
	FT_LOAD_TARGET_MODE (val->key.flags) == FT_RENDER_LCD, and similar.

2005-07-21  Keith Packard  <keithp@keithp.com>

	reviewed by: cworth, otaylor

	* src/cairo-ft-font.c: (_ft_font_cache_create_entry),
	(_ft_unscaled_font_set_scale), (_native_byte_order_lsb),
	(_get_bitmap_surface), (_render_glyph_outline),
	(_render_glyph_bitmap), (_get_pattern_load_flags),
	(_get_options_load_flags):
	* src/cairo-xlib-surface.c: (cairo_xlib_surface_set_size),
	(_native_byte_order_lsb), (_xlib_glyphset_cache_create_entry),
	(_xlib_glyphset_cache_destroy_entry), (_get_glyphset_cache),
	(_select_text_mask_format), (_cairo_xlib_surface_show_glyphs32),
	(_cairo_xlib_surface_show_glyphs16),
	(_cairo_xlib_surface_show_glyphs8):
	* src/cairoint.h:

	Add ARGB glyph support.
	
	Change Bi-level glyph support to use A1 format.
	
	Support bit/byte swapping of glyph image data in
	the Xlib backend.

2005-07-21  Carl Worth  <cworth@cworth.org>

	* src/cairo-ft.h:
	* src/cairo-quartz.h: Whitespace fixes.

2005-07-21  David Reveman  <davidr@novell.com>

	* src/cairo-glitz-surface.c (_cairo_glitz_area_move_out): Check if
	empty area.

2005-07-21  Keith Packard  <keithp@keithp.com>
